# google-cloud-asset-converter

./: README.md  pyproject.toml
src/google_asset_query_converter/: __init__.py  __main__.py  converter.py  queryresult.py
tests/: bytes-query-result.json  date-query-result.json  json-query-result.json  query-result.json  test_against_api.py  test_bytes.py  test_converters.py  test_date.py  test_json.py  test_schema.py  test_time.py  time-query-result.json
