[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "setuptools-scm"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "gcloud-asset-query-converter"
description = "Convert Google Cloud Assets query results to JSON format."
readme = "README.md"

keywords = [
  "asset",
  "converter",
  "gcloud",
  "json",
  "query",
]
license.file = "LICENSE"
authors = [
  { name = "Mark van Holsteijn", email = "mvanholsteijn@xebia.com" },
]
requires-python = ">=3.10"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "google-cloud-asset",
  "pydantic",
]
optional-dependencies.dev = [
  "pyproject-fmt",
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.pyproject-fmt]
column_width = 120
indent = 2
keep_full_version = false
min_python_version = "3.12"


[urls]
homepage = "https://github.com/xebia/gcloud-asset-query-converter"
repository = "https://github.com/xebia/gcloud-asset-query-converter"
