[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/google_asset_query_converter/version.py"


[project]
name = "google-asset-query-converter"
description = "Convert Google Cloud Assets query results to JSON format."
dynamic = ["version"]
readme = "README.md"

keywords = [
    "asset",
    "converter",
    "gcloud",
    "json",
    "query",
]

license = "Apache-2.0"

authors = [
    { name = "Mark van Holsteijn", email = "mvanholsteijn@xebia.com" },
]
requires-python = ">=3.12"

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-cloud-asset",
    "pydantic",
]
optional-dependencies.dev = [
    "pyproject-fmt",
    "pytest",
    "pytest-cov",
    "pytest-integration",
    "gcloud-config-helper",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
google-asset-query-converter = "google_asset_query_converter.__main__:main"

[tool.pyproject-fmt]
column_width = 120
indent = 2
keep_full_version = false
min_python_version = "3.10"


[urls]
repository = "https://github.com/xebia/google-asset-query-converter"